2006-04-10  Chris Toshok  <toshok@ximian.com>

	* Starcraft/Starcraft.Gui/GameModeDialog.cs (.ctor): set
	background_path to null, as we'll load it in ResourceLoader.
	(ResourceLoader): manually load the background, using its specific
	translucent/transparent indices.
	
	* Starcraft/Starcraft.Gui/GuiUtil.cs (SurfaceFromStream): always
	use our managed Pcx loader.
	(SurfaceFromStream): for the Stream,bool overload, pass in 252,0
	for translucent,transparent, respectively.
	(SurfaceFromStream): for the Stream overload, pass -1,-1.
	
	* Starcraft/Starcraft.Gui/UIScreen.cs (ResourceLoader): pass -1,-1
	to the Pcx.ReadFromStream calls.

	* Starcraft/Starcraft.Gui/CreditsScreen.cs (ResourceLoader): pass
	-1,-1 to the Pcx.ReadFromStream calls.

	* Starcraft/Starcraft.Gui/Pcx.cs (ReadFromStream): allow the
	passing in of translucent/transparent indices.

	* Starcraft/Starcraft.Mpq/Bin.cs (ElementFlags): include the
	unknown flages as Unknown/Unused.

2006-04-10  Chris Toshok  <toshok@hungry.com>

	* Starcraft/Starcraft.Gui/ListBoxElement.cs: track cursor when
	list becomes empty/non-empty.  Set it initially to -1.

	* Starcraft/Starcraft.Gui/LoginScreen.cs (OkElement delegate): if
	we don't have a selected id, return immediately.  This should only
	happen if the list is empty.

	* Starcraft/Starcraft.Gui/ConnectionScreen.cs: add Ok dialog when
	people select Battle.net.

	* Starcraft/Starcraft.Gui/credits.txt: thank the
	mono/sdl/sdldotnet projects.

2006-04-10  Chris Toshok  <toshok@hungry.com>

	* Starcraft/Starcraft.Gui/ConnectionScreen.cs: populate the
	ListBox element with our choices, and handle the cursor moving
	properly.  Ifdef this for the time being to only display
	Battle.net.

	* Starcraft/Starcraft.Gui/GameModeDialog.cs: insert the title
	string in the dialog, and change Canceled/Activated to
	Cancel/Activate.

	* Starcraft/Starcraft.Gui/UIDialog.cs: keep track of the parent
	UIScreen that popped us up.